=========================================================================
CHANGE LOG
=========================================================================

Changes up to 0.98

   beta31

   * dihedral display during dihedral bond torsion editing

   beta30

   * presentation mode now auto-quits after blank screen on either end.

   * fixed (or rather worked around) two bugs with nVidia on Mac

   * wildcards for the main selection operations (alt, name, resi, resn,
     chain, segi, text_type) 

   * wildcard, atom_name_wildcard, ignore_case settings

   * pushed selection property list and range handling down into C
     (selections should now run much faster)

   * defer_builds_mode setting for improved performance with long
     trajectories -- now possible to work with files containing 
     thousands of states, and to render impossibly long movies piecewise.

   * switched SDF parsing into C -- "way faster dude!"

   * new "move" option for the fuse command

   * url support for pdb, mol, mol2, sdf, xplor, ccp4, pkl, and pse files.

   beta29

   * angle & dihedral visualization

   * fixed control-panel click bug

   * reorganized the Tcl/Tk modules to better enable customized
     user interfaces

   * fixed long-standing transparency shadow bug

   * improved 64-bit cleanliness

   * fixed stereo rendering for selections and edit indicators

   * added support for embedded data on stdin

   * support for 4-letter residue codes in PDB files

   * new selection operator for proteins "pepseq/ps." with 1-letter
     peptide codes

   * streamlined launch time in various ways

   * updated lighting model to increase WYSIWG characteristics
     between OpenGL and ray-tracing

   * fixed major bug with symmetry expansion

   * overhaul of the scene subsystem to create some order

   * orient command now chooses the least perturbation from the 
     current view

   * "as" command for more efficient changing of representations
